-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b24
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225888 | 14 | Ioi Lam | P3 | Resolved | Fixed | team |
A lot of runtime/appcds tests started to crash in latest jdk13 bits. No issue is present in latest promoted jdk13b22 build.
The crash is
# Internal Error (open/src/hotspot/share/jvmci/jvmciJavaClasses.cpp:70), pid=12270, tid=12284
# fatal error: symbol with name metadataHandle and signature J was not found in symbol table (klass=jdk/vm/ci/hotspot/HotSpotConstantPool)
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-05-23-1918462.katya.null)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-05-23-1918462.katya.null, mixed mode, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xffdeec] HotSpotJVMCI::compute_offset(int&, Klass*, char const*, char const*, bool, Thread*)+0x2dc
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/katya/work/JavaSE/Hotspot/ws/jdk.jdk/JTwork/scratch/0/core.12270)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -ea -esa -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+TieredCompilation -XX:+UseJVMCICompiler -Djvmci.Compiler=graal -XX:ArchiveClassesAtExit=/home/katya/work/JavaSE/Hotspot/ws/jdk.jdk/JTwork/scratch/0/appcds-12h36m23s577.jsa -Xshare:auto -Xlog:cds+dynamic=debug ArrayKlassesApp
Host: olegbox, Intel(R) Xeon(R) CPU E5-2630 0 @ 2.30GHz, 24 cores, 15G, Ubuntu 16.04.3 LTS
Time: Thu May 23 12:36:24 2019 PDT elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f120c298800): JavaThread "JVMCI CompilerThread0" daemon [_thread_in_vm, id=12284, stack(0x00007f11d4b9e000,0x00007f11d4c9f000)]
Current CompileTask:
JVMCI: 579 188 4 java.lang.String::charAt (25 bytes)
Stack: [0x00007f11d4b9e000,0x00007f11d4c9f000], sp=0x00007f11d4c9d550, free space=1021k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xffdeec] HotSpotJVMCI::compute_offset(int&, Klass*, char const*, char const*, bool, Thread*)+0x2dc
V [libjvm.so+0x10014c4] HotSpotJVMCI::compute_offsets(Thread*)+0x33b4
V [libjvm.so+0x1051a54] JVMCIRuntime::initialize(JVMCIEnv*)+0x274
V [libjvm.so+0x1054f2a] JVMCIRuntime::compile_method(JVMCIEnv*, JVMCICompiler*, methodHandle const&, int)+0xfa
V [libjvm.so+0x9cec3b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd4b
V [libjvm.so+0x9cf088] CompileBroker::compiler_thread_loop()+0x358
V [libjvm.so+0x16bf366] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x16c49a6] Thread::call_run()+0xf6
V [libjvm.so+0x13df8be] thread_native_entry(Thread*)+0x10e
The crash is
# Internal Error (open/src/hotspot/share/jvmci/jvmciJavaClasses.cpp:70), pid=12270, tid=12284
# fatal error: symbol with name metadataHandle and signature J was not found in symbol table (klass=jdk/vm/ci/hotspot/HotSpotConstantPool)
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-05-23-1918462.katya.null)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-05-23-1918462.katya.null, mixed mode, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xffdeec] HotSpotJVMCI::compute_offset(int&, Klass*, char const*, char const*, bool, Thread*)+0x2dc
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/katya/work/JavaSE/Hotspot/ws/jdk.jdk/JTwork/scratch/0/core.12270)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -ea -esa -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+TieredCompilation -XX:+UseJVMCICompiler -Djvmci.Compiler=graal -XX:ArchiveClassesAtExit=/home/katya/work/JavaSE/Hotspot/ws/jdk.jdk/JTwork/scratch/0/appcds-12h36m23s577.jsa -Xshare:auto -Xlog:cds+dynamic=debug ArrayKlassesApp
Host: olegbox, Intel(R) Xeon(R) CPU E5-2630 0 @ 2.30GHz, 24 cores, 15G, Ubuntu 16.04.3 LTS
Time: Thu May 23 12:36:24 2019 PDT elapsed time: 0 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0x00007f120c298800): JavaThread "JVMCI CompilerThread0" daemon [_thread_in_vm, id=12284, stack(0x00007f11d4b9e000,0x00007f11d4c9f000)]
Current CompileTask:
JVMCI: 579 188 4 java.lang.String::charAt (25 bytes)
Stack: [0x00007f11d4b9e000,0x00007f11d4c9f000], sp=0x00007f11d4c9d550, free space=1021k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xffdeec] HotSpotJVMCI::compute_offset(int&, Klass*, char const*, char const*, bool, Thread*)+0x2dc
V [libjvm.so+0x10014c4] HotSpotJVMCI::compute_offsets(Thread*)+0x33b4
V [libjvm.so+0x1051a54] JVMCIRuntime::initialize(JVMCIEnv*)+0x274
V [libjvm.so+0x1054f2a] JVMCIRuntime::compile_method(JVMCIEnv*, JVMCICompiler*, methodHandle const&, int)+0xfa
V [libjvm.so+0x9cec3b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd4b
V [libjvm.so+0x9cf088] CompileBroker::compiler_thread_loop()+0x358
V [libjvm.so+0x16bf366] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x16c49a6] Thread::call_run()+0xf6
V [libjvm.so+0x13df8be] thread_native_entry(Thread*)+0x10e
- backported by
-
JDK-8225888 runtime/appcds tests crash in "HotSpotJVMCI::compute_offset" when running in Graal as JIT mode
-
- Resolved
-
- relates to
-
JDK-8207812 Implement Dynamic CDS Archive
-
- Resolved
-
-
JDK-8240548 [TESTBUG] runtime/cds/appcds/dynamicArchive/NoClassToArchive.java fails with Graal
-
- Resolved
-